CrostiniManager uses status for StartTerminaVm.

Only if the response proto status is "STARTING" do we wait for the
TremplinStartedSignal before continuing.

Bug: 884576
Change-Id: Id02a5863c2971329991d47bf156639fdc7f281bd
Reviewed-on: https://chromium-review.googlesource.com/1248065
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594629}
Former-commit-id: ca393e722b94ac0f6f84597a459f981d5e23aaa3